front end z-index issue

--- a/assets/css/tourfic.css
+++ b/assets/css/tourfic.css
@@ -1107,6 +1107,7 @@
     right: 0;
     top: 102%;
     display: none;
+    z-index: 999;
 }
 .tf-more-info .form-group.form-check{
     width: 33%;
